Added Angular Material to Project

--- a/src/app/admin/layout/components/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
-<ul>
-    <li><a routerLink="/admin">Dashboard</a></li>
-    <li><a routerLink="customers">Customers</a></li>
-    <li><a routerLink="products">Products</a></li>
-    <li><a routerLink="ordes">Order</a></li>
-    <li><a routerLink="">Siteyi Gör</a></li>
-</ul>
+<mat-list role="list">
+     <a mat-list-item routerLink="/admin" role="listitem">Dashboard</a>
+     <a mat-list-item routerLink="customers" role="listitem">Customers</a>
+     <a mat-list-item routerLink="products" role="listitem">Products</a>
+     <a mat-list-item routerLink="orders" role="listitem">Order</a>
+     <a mat-list-item routerLink="" role="listitem">View Site</a>
+  </mat-list>
