--- a/src/app/admin/layout/components/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <mat-list role="list">
-     <a mat-list-item routerLink="/admin" role="listitem">Dashboard</a>
-     <a mat-list-item routerLink="customers" role="listitem">Customers</a>
-     <a mat-list-item routerLink="products" role="listitem">Products</a>
-     <a mat-list-item routerLink="orders" role="listitem">Order</a>
-     <a mat-list-item routerLink="" role="listitem">View Site</a>
-  </mat-list>
+   <a mat-list-item routerLink="/admin/dashboard" role="listitem">Dashboard</a>
+   <a mat-list-item routerLink="customers" role="listitem">Customers</a>
+   <a mat-list-item routerLink="products" role="listitem">Products</a>
+   <a mat-list-item routerLink="orders" role="listitem">Order</a>
+   <a mat-list-item routerLink="" role="listitem">View Site</a>
+</mat-list>
