--- a/src/app/admin/components/products/create/create.component.css
+++ b/src/app/admin/components/products/create/create.component.css
@@ -2,12 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-}
-
-.product-create {
-    margin: 5px;
-}
-
-.create-button {
-    margin: 5px;
-}
+  }
+  
+  .product-create {
+    margin: 5px 5px 5px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 10px;
+  }
+  
+  .btn {
+    margin: 5px 5px 5px
+  }
