Delete Operation with Delete Directive

--- a/src/app/admin/components/products/list/list.component.css
+++ b/src/app/admin/components/products/list/list.component.css
@@ -1,3 +1,11 @@
 table {
     width: 100%;
   }
+  #deleteicon{
+    color: red;
+    cursor: pointer;
+  }
+  #updateicon{
+    color:coral;
+    cursor: pointer;
+  }
