--- a/src/app/admin/components/products/list/list.component.html
+++ b/src/app/admin/components/products/list/list.component.html
@@ -26,9 +26,18 @@
 
       <ng-container matColumnDef="updateDate">
         <th mat-header-cell *matHeaderCellDef> UpdateDate </th>
-        <td mat-cell *matCellDef="let element"> {{element.updateDate}} </td>
+        <td mat-cell  *matCellDef="let element"> {{element.updateDate}} </td>
       </ng-container>
-  
+
+      <ng-container matColumnDef="update">
+        <th mat-header-cell *matHeaderCellDef> Update </th>
+        <td [id]="element.id" mat-cell *matCellDef="let element"><i id="updateicon"><mat-icon >edit</mat-icon></i></td>
+      </ng-container>
+
+      <ng-container matColumnDef="delete" #container>
+        <th mat-header-cell *matHeaderCellDef> Delete </th>
+        <td mat-cell [id]="element.id" *matCellDef="let element" appDelete (callback)="getProducts()"></td>
+      </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
