Delete Directive Corrections

--- a/src/app/dialogs/delete-dialog/delete-dialog.component.html
+++ b/src/app/dialogs/delete-dialog/delete-dialog.component.html
@@ -4,6 +4,6 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Hayir</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial >EVET</button>
+  <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Evet</button>
 
 </div>
