--- a/src/app/admin/components/products/create/create.component.css
+++ b/src/app/admin/components/products/create/create.component.css
@@ -3,14 +3,17 @@
     flex-direction: column;
     align-items: flex-start;
   }
-  
+
   .product-create {
     margin: 5px 5px 5px;
     display: grid;
     grid-template-columns: 1fr;
     grid-row-gap: 10px;
   }
-  
+
   .btn {
     margin: 5px 5px 5px
+  }
+  .create-button{
+    margin-top: 1rem;
   }
