--- a/src/app/admin/components/products/list/list.component.html
+++ b/src/app/admin/components/products/list/list.component.html
@@ -29,6 +29,11 @@
         <td mat-cell  *matCellDef="let element"> {{element.updateDate}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="photo">
+        <th mat-header-cell *matHeaderCellDef> Image </th>
+        <td [id]="element.id" mat-cell *matCellDef="let element"><i id="insertphoto" (click)="addProductImages(element.id)"><mat-icon> insert_photo</mat-icon></i></td>
+      </ng-container>
+
       <ng-container matColumnDef="update">
         <th mat-header-cell *matHeaderCellDef> Update </th>
         <td [id]="element.id" mat-cell *matCellDef="let element"><i id="updateicon"><mat-icon >edit</mat-icon></i></td>
