--- a/src/app/admin/components/products/create/create.component.html
+++ b/src/app/admin/components/products/create/create.component.html
@@ -12,5 +12,6 @@
       <mat-label>Price</mat-label>
       <input matInput  type="number" min="0" value="0" formControlName="price">
     </mat-form-field>
+    <button mat-raised-button color="primary" class="create-button" (click)="create()">Create Product</button>
   </form>
 </div>
