--- a/src/app/dialogs/select-product-image-dialog/select-product-image-dialog.component.html
+++ b/src/app/dialogs/select-product-image-dialog/select-product-image-dialog.component.html
@@ -1,6 +1,30 @@
 <h2 mat-dialog-title>Select Product Images</h2>
 <mat-dialog-content class="mat-typography">
   <app-file-upload [options]="options" ></app-file-upload>
+
+  <div class="row" >
+    <div class="col-md-3 mt-3" *ngFor="let image of images" >
+      <mat-card class="product-image-card">
+        <mat-card-header>
+          <!-- <div mat-card-avatar class="product-header-image"></div>
+          <mat-card-title>Shiba Inu</mat-card-title>
+          <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
+        </mat-card-header>
+        <img mat-card-image width="250" height="250" [src]="image.path" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+
+        </mat-card-content>
+        <mat-card-actions>
+          <button  class="btn btn-danger" (click)="deleteImage(image.id,$event)">Delete</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </div>
+
+
+
+
+
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
