--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,8 +18,11 @@
                             <a class="nav-link active" aria-current="page" routerLink="products">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" routerLink="basket">Basket</a>
+                            <a class="nav-link active" aria-current="page" routerLink="basket">Shopping Cart</a>
                         </li>
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" routerLink="/register">Register</a>
+                      </li>
                         <li class="nav-item">
                             <a class="btn btn-outline-success" routerLink="admin/">Admin Panel</a>
                         </li>
