--- a/src/app/ui/components/register/register.component.html
+++ b/src/app/ui/components/register/register.component.html
@@ -10,8 +10,8 @@
       </div>
       <div class="form-group">
         <label for="kullaniciAdi">Username</label>
-        <input type="text" formControlName="userName" class="form-control" id="userName" [ngClass]="{'is-invalid': submitted && component.userName.errors}" placeholder="User Name">
-        <small class="form-text text-muted invalid-feedback" *ngIf="submitted && component.userName.errors?.required">Please do not leave the username blank.</small>
+        <input type="text" formControlName="username" class="form-control" id="username" [ngClass]="{'is-invalid': submitted && component.username.errors}" placeholder="User Name">
+        <small class="form-text text-muted invalid-feedback" *ngIf="submitted && component.username.errors?.required">Please do not leave the username blank.</small>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
@@ -24,8 +24,8 @@
         <input type="password" formControlName="password" class="form-control" id="password" placeholder="Şifre" [ngClass]="{'is-invalid': submitted && component.password.errors}">
       </div>
       <div class="form-group">
-        <label for="password">Password Again</label>
-        <input type="password" formControlName="passwordAgain" class="form-control" id="password" placeholder="Şifre Tekrar" [ngClass]="{'is-invalid': submitted && component.passwordAgain.errors}">
+        <label for="passwordConfirm">Password Again</label>
+        <input type="password" formControlName="passwordConfirm" class="form-control" id="passwordConfirm" placeholder="Şifre Tekrar" [ngClass]="{'is-invalid': submitted && component.passwordConfirm.errors}">
         <small *ngIf="submitted && frm.hasError('notSame')">Please verify the password.</small>
       </div>
       <br />
