--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,9 @@
                         <li class="nav-item">
                           <a class="nav-link active" aria-current="page" routerLink="/register">Register</a>
                       </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" routerLink="/login">Login</a>
+                    </li>
                         <li class="nav-item">
                             <a class="btn btn-outline-success" routerLink="admin/">Admin Panel</a>
                         </li>
