--- a/src/app/dialogs/select-product-image-dialog/select-product-image-dialog.component.html
+++ b/src/app/dialogs/select-product-image-dialog/select-product-image-dialog.component.html
@@ -1,25 +1,26 @@
-<h2 mat-dialog-title>Select Product Images</h2>
+<h2 mat-dialog-title>Product Images</h2>
 <mat-dialog-content class="mat-typography">
-  <app-file-upload [options]="options" ></app-file-upload>
+  <app-file-upload [options]="options"></app-file-upload>
 
-  <div class="row" >
-    <div class="col-md-3 mt-3" *ngFor="let image of images" >
+  <div class="row">
+    <div class="col-md-2" *ngFor="let image of images">
       <mat-card class="product-image-card">
         <mat-card-header>
-          <!-- <div mat-card-avatar class="product-header-image"></div>
-          <mat-card-title>Shiba Inu</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
+          <input type="radio" name="img" (click)="showCase(image.id)" [checked]="image.showCase"  />
         </mat-card-header>
-        <img mat-card-image width="250" height="250" [src]="image.path" alt="Photo of a Shiba Inu">
+        <img style="max-height: 10rem;" mat-card-image [src]="image.path">
         <mat-card-content>
-
+    
         </mat-card-content>
         <mat-card-actions>
-          <button  class="btn btn-danger" (click)="deleteImage(image.id,$event)">Delete</button>
+          <button mat-button style="background-color:chocolate;color:wheat;" (click)="deleteImage(image.id, $event)">DELETE</button>
         </mat-card-actions>
       </mat-card>
     </div>
   </div>
+ 
+
+
 
 
 
