--- a/src/app/ui/components/baskets/baskets.component.html
+++ b/src/app/ui/components/baskets/baskets.component.html
@@ -1,1 +1,40 @@
-<p>baskets works!</p>
+
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Shopping Cart</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Price</th>
+                <th></th>
+
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let basketItem of basketItems; let i = index">
+                <th scope="row">{{i + 1 }}</th>
+                <td>{{basketItem.name}}</td>
+                <td>{{basketItem.quantity}}</td>
+                <td>
+                  {{basketItem.price  * basketItem.quantity }} $
+                </td>
+                <td>
+                  <button type="button" class="btn btn-danger" (click)="removeBasketItem(basketItem.basketItemId)">X</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-success">Complete Shopping</button>
+        </div>
+      </div>
+
+  
