--- a/src/app/ui/components/baskets/baskets.component.html
+++ b/src/app/ui/components/baskets/baskets.component.html
@@ -33,7 +33,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-success">Complete Shopping</button>
+          <button type="button" class="btn btn-success" (click)="shoppingComplete()">Alışverişi Tamamla</button>
         </div>
       </div>
 
